--- a/WAD_Exam/WAD_Exam.csproj
+++ b/WAD_Exam/WAD_Exam.csproj
@@ -163,6 +163,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202203171221204_InitialCreate.cs" />
+    <Compile Include="Migrations\202203171221204_InitialCreate.Designer.cs">
+      <DependentUpon>202203171221204_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202203171257513_Update1.cs" />
+    <Compile Include="Migrations\202203171257513_Update1.Designer.cs">
+      <DependentUpon>202203171257513_Update1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Model1.cs" />
@@ -232,6 +240,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202203171221204_InitialCreate.resx">
+      <DependentUpon>202203171221204_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202203171257513_Update1.resx">
+      <DependentUpon>202203171257513_Update1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
